# SDL3-template-C99

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
